# SoSearch

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  QUICK_START.md  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  release.yml
cross/: aarch64-linux.Dockerfile
examples/: fetch_html.rs
src/: brave_compat.rs  main.rs  models.rs
src/engines/: brave.rs  duckduckgo.rs  mod.rs  yahoo.rs
