[package]
name = "SoSearch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures = "0.3.32"
rquest = "5.1.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
